--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-safe-area-context": "^4.14.0"
+    "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
