--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-sqlite-storage": "^6.0.1"
+    "expo-sqlite": "~15.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
