--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-safe-area-context": "^4.14.0",
-    "expo-sqlite": "~15.0.3"
+    "expo-sqlite": "~15.0.3",
+    "expo-router": "~4.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
